# card-raffle

./: .env.example  .gitignore  Anchor.toml  README.md
programs/card-raffle/: Cargo.toml
programs/card-raffle/src/: errors.rs  events.rs  lib.rs  state.rs
programs/card-raffle/src/instructions/: config.rs  drops.rs  mod.rs  randomness.rs  tickets.rs  user.rs
programs/card-raffle/tests/: buy_tickets.rs  full_drop_with_prize.rs  happy_path.rs  initialize_config.rs  security.rs  smoke.rs
programs/card-raffle/tests/common/: mod.rs
scripts/: load-wallet.ts
